[package]
name = "ledger_installer_gui"
version = "0.1.0"
authors = ["pyth"]
edition = "2021"


[dependencies]
async-channel = "2.2.0"
iced_runtime = "0.12.1"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["time", "rt", "rt-multi-thread", "macros"] }

iced = { version = "0.12.1",default-features = false, features = ["webgl"]}

console_log = "1.0"
